--- a/Changelog
+++ b/Changelog
@@ -1,8 +1,11 @@
 yoshimi 2.3.1 M
 
 [presets]
-Removed overcautious section disabling and re-enabling.
+BugFix: CLI attempting to copy/save nonexistent addSynth Mod elements!
+CLI has more checks for sections being active.
 
+[presets]
+Removed overcautious section disabling and re-enabling.
 Changed all references to 'MIDI-Learn' in this file to the same format.
 It was getting hard to keep track of them.
 
