--- a/Changelog
+++ b/Changelog
@@ -1,6 +1,8 @@
 yoshimi 2.3.1 M
 
 [presets]
+revised unfied presets so it can return human readable preset groups
+    applied this to GUI code also addsynth global.
 window/text sizes now correct
 
 [presets]
