--- a/Changelog
+++ b/Changelog
@@ -1,5 +1,11 @@
 yoshimi 2.3.1 M
 
+2023-10-31 Will
+bn 2274
+Further revisions to unified presets, now also applied to Padsynth.
+Human friendly preset group Gui field in window now done
+Outline code in place for deleteing entries from the Gui
+
 [presets]
 revised unfied presets so it can return human readable preset groups
     applied this to GUI code also addsynth global.
