--- a/Changelog
+++ b/Changelog
@@ -1,4 +1,10 @@
 yoshimi 2.3.1 M
+
+2023-11-06 Will
+bn 2277
+GUI unified presets done for Resonance and Waveform.
+Further work on Yoshimi Controls.
+
 2023-11-04 Will
 bn 2276
 Changed midi CC conversion names from ~Inner to more meaningful ~Adjusted
