--- a/Changelog
+++ b/Changelog
@@ -1,5 +1,15 @@
 yoshimi 2.3.1 M
 
+2023-11-07 Will
+bn 2278
+BugFix: Wrong spelling in lists for amplitude LFO.
+BufFix: Ucopy/Upaste type text not updating
+GUI unified presets done for LFOs
+GUI unified presets done for Envelopes
+GUI unified presets done for Filters
+GUI unified presets done for Effects
+Some UI cleanups
+
 2023-11-06 Will
 bn 2277
 GUI unified presets done for Resonance and Waveform.
